--- a/css/general.css
+++ b/css/general.css
@@ -4,10 +4,17 @@
     text-decoration: none;
     font-size: 1.2em;
     font-family: 'Raleway', sans-serif;
-    width: 25%;
+    width: 22%;
 }
 
 h2 {
     font-family: 'Raleway', sans-serif;
+}
 
+h3 {
+    font-family: 'Raleway', sans-serif;
+}
+
+p {
+    font-family: 'Raleway', sans-serif;
 }
