--- a/css/grid.css
+++ b/css/grid.css
@@ -1,9 +1,3 @@
-
-.gutter {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
 .grid {
   margin: 0;
   padding: 0;
@@ -55,3 +49,158 @@
 .unit-s-1-2 {
   width: 50.0000%;
 }
+
+.unit-offset-s-1-2 {
+  margin-left: 50.0000%;
+}
+
+.unit-s-1-3 {
+  width: 33.3333%;
+}
+
+.unit-offset-s-1-3 {
+  margin-left: 33.3333%;
+}
+
+.unit-s-2-3 {
+  width: 66.6667%;
+}
+
+.unit-offset-s-2-3 {
+  margin-left: 66.6667%;
+}
+
+.unit-s-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-s-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-s-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-s-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-s-1-2,.unit-s-1-3,.unit-s-2-3,.unit-s-1-4,.unit-s-3-4 {
+  display: inline-block;
+  visibility: visible;
+}
+
+@media only screen and (min-width: 30em) {
+
+.unit-m-hidden {
+  display: none;
+  visibility: hidden;
+}
+
+.unit-m-1 {
+  display: block;
+  visibility: visible;
+  width: 100%;
+}
+
+.unit-offset-m-0 {
+  margin-left: 0;
+}
+
+.unit-m-1-2 {
+  width: 50.0000%;
+}
+
+.unit-offset-m-1-2 {
+  margin-left: 50.0000%;
+}
+
+.unit-m-1-3 {
+  width: 33.3333%;
+}
+
+.unit-offset-m-1-3 {
+  margin-left: 33.3333%;
+}
+
+.unit-m-2-3 {
+  width: 66.6667%;
+}
+
+.unit-offset-m-2-3 {
+  margin-left: 66.6667%;
+}
+
+.unit-m-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-m-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-m-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-m-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-m-1-5 {
+  width: 20.0000%;
+}
+
+.unit-offset-m-1-5 {
+  margin-left: 20.0000%;
+}
+
+.unit-m-2-5 {
+  width: 40.0000%;
+}
+
+.unit-offset-m-2-5 {
+  margin-left: 40.0000%;
+}
+
+.unit-m-3-5 {
+  width: 60.0000%;
+}
+
+.unit-offset-m-3-5 {
+  margin-left: 60.0000%;
+}
+
+.unit-m-4-5 {
+  width: 80.0000%;
+}
+
+.unit-offset-m-4-5 {
+  margin-left: 80.0000%;
+}
+
+.unit-m-1-6 {
+  width: 16.6667%;
+}
+
+.unit-offset-m-1-6 {
+  margin-left: 16.6667%;
+}
+
+.unit-m-5-6 {
+  width: 83.3333%;
+}
+
+.unit-offset-m-5-6 {
+  margin-left: 83.3333%;
+}
+
+.unit-m-1-2,.unit-m-1-3,.unit-m-2-3,.unit-m-1-4,.unit-m-3-4,.unit-m-1-5,.unit-m-2-5,.unit-m-3-5,.unit-m-4-5,.unit-m-1-6,.unit-m-5-6 {
+  display: inline-block;
+  visibility: visible;
+}
+
+}
+
+@media only screen and (min-width: 50em)
