--- a/css/general.css
+++ b/css/general.css
@@ -35,6 +35,23 @@ body {
 .img-flex {
   display: block;
   width: 100%;
+    padding: 0.2em;
+}
+
+.nav-top {
+    clear: both; /* forces content content to be placed after a float */
+}
+
+.nav-top ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.nav-top li {
+    margin: 0;
+    padding: 0;
+    display: inline;
 }
 
 .nav {   
@@ -56,4 +73,23 @@ h3 {
 
 p {
     font-family: 'Raleway', sans-serif;
+}
+
+.founder {
+    float: left;
+    height: 250px;
+}
+
+.home-page-img,
+.about-us-background {
+    width: 100%;
+    height: 250px;
+    background-image:url("http://placehold.it/800x400");
+    background-size: cover;
+    background-repeat:no-repeat;
+}
+
+.about-us-background {
+    background-image: url("http://placehold.it/800x400");
+    background-position: center;
 }
