--- a/css/general.css
+++ b/css/general.css
@@ -32,19 +32,33 @@ body {
   white-space: nowrap;
 }
 
+
 .img-flex {
   display: block;
   width: 100%;
     padding: 0.2em;
 }
 
+/*
+.nav {   
+    float:left;
+    margin: 1em 1em;
+    font-size: 1.2em;
+    font-family: 'Raleway', sans-serif;
+    width: 22%;
+}
+
+*/
+
 .nav-top {
     clear: both; /* forces content content to be placed after a float */
+    font-family: 'Raleway', sans-serif;
 }
 
 .nav-top ul {
     margin: 0;
     padding: 0;
+    background-color: black;
     text-align: center;
 }
 
@@ -54,13 +68,15 @@ body {
     display: inline;
 }
 
-.nav {   
-    float:left;
-    margin: 1em 1em;
+.nav-top a,
+.nav-top a:link,
+.nav-topa:visited {
+    display: inline-block;
+    margin: 0;
+    padding: 1.5rem 10%;
+    color: white;
+    font-size: 1.25rem;
     text-decoration: none;
-    font-size: 1.2em;
-    font-family: 'Raleway', sans-serif;
-    width: 22%;
 }
 
 h2 {
@@ -80,8 +96,7 @@ p {
     height: 250px;
 }
 
-.home-page-img,
-.about-us-background {
+.about-background {
     width: 100%;
     height: 250px;
     background-image:url("http://placehold.it/800x400");
@@ -89,7 +104,20 @@ p {
     background-repeat:no-repeat;
 }
 
-.about-us-background {
+.about-background {
+    background-image: url("http://placehold.it/800x400");
+    background-position: center;
+}
+
+.contact-background {
+    width: 100%;
+    height: 320px;
+    background-image:url("http://placehold.it/800x400");
+    background-size: cover;
+    background-repeat:no-repeat;
+}
+
+.contact-background {
     background-image: url("http://placehold.it/800x400");
     background-position: center;
 }
