--- a/css/general.css
+++ b/css/general.css
@@ -91,6 +91,12 @@ p {
     font-family: 'Raleway', sans-serif;
 }
 
+.cover-names {
+    font-family: 'Raleway', sans-serif;   
+    color: white;
+    font-size: 1.5em;
+}
+
 .founder {
     float: left;
     height: 250px;
@@ -166,7 +172,7 @@ p {
 .chart__item:hover,
 .chart__item:focus,
 .chart__item:active {
-    background-color: rgba(204, 204, 204, 1.00)
+    background-color: gray;
     
 }
 
@@ -174,7 +180,7 @@ p {
 .chart__link:link,
 .chart__link:visited {
   display: block;
-  color: #e2e2e2;
+  color: black;
   text-decoration: none;
 }
 
@@ -208,11 +214,14 @@ p {
 
 }
 
+
 .chart__bar:hover,
 .chart__bar:focus,
 .chart__bar:active {
-    background-color: rgba(127, 219, 255, 1.00);
+    background-color: gray;
 }
+
+
 
 .chart__count {
   display: inline-block;
@@ -220,18 +229,20 @@ p {
   margin: 0 0 0 50%;
   padding: 0.5em;
   position: absolute;
-  top: -2em;
+    top: 7em;
+
   width: 4.6em;
   z-index: 1;
     transition: all 250ms linear;
   text-align: center;
+    font-family: 'Raleway', sans-serif;
+    color: rgba(255, 255, 255, 0);
 }
 
 .chart__count::after {
-  bottom: -10px;
   content: " ";
   height: 0;
-  left: -10px;
+  left: -8px;
   margin-left: 50%;
   position: absolute;
   width: 0;
@@ -240,6 +251,7 @@ p {
 }
 
 .chart__bar-wrap:hover .chart__count {
-    top: -4em;
     opacity: 1;
+    top: 4em;
+    color: rgba(255, 255, 255, 1.00);
 }
