--- a/css/general.css
+++ b/css/general.css
@@ -157,6 +157,7 @@ p {
 
 .chart {
     position: relative;
+    padding: 0.2em;
 }
 
 
@@ -165,6 +166,7 @@ p {
 .chart__item:visited {
   float: left;
   position: relative;
+
 }
 
 .chart__item:hover,
@@ -179,12 +181,12 @@ p {
 .chart__link:visited {
   display: block;
   color: black;
-  text-decoration: none;
 }
 
 .chart__label {
   position: absolute;
   width: 100%;
+    padding: 0.2em;
 
   text-align: center;
 }
