--- a/css/general.css
+++ b/css/general.css
@@ -23,6 +23,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+font-family: 'Raleway', sans-serif;
 }
 
 .ir {
@@ -79,6 +80,10 @@ body {
     color: white;
     font-size: 1.25rem;
     text-decoration: none;
+}
+
+h1 {
+    font-family: 'Raleway', sans-serif;
 }
 
 h2 {
