--- a/css/general.css
+++ b/css/general.css
@@ -248,3 +248,31 @@ p {
     top: 4em;
     color: rgba(255, 255, 255, 1.00);
 }
+
+.relative {
+    position: relative;
+}
+
+.layout-title {
+    position: absolute;
+    margin-left: 1.4em;
+}
+
+.layout-project {
+    position: absolute;
+    margin-left: 1em;
+    top: 1em;
+}
+
+.banner {
+    width: 100%;
+    height: 200px;
+    background-image:url("http://placehold.it/600x200");
+    background-size: cover;
+    background-repeat:no-repeat;
+}
+
+.banner {
+    background-image: url("http://placehold.it/600x200");
+    background-position: center;
+}
