--- a/css/general.css
+++ b/css/general.css
@@ -276,3 +276,28 @@ p {
     background-image: url("http://placehold.it/600x200");
     background-position: center;
 }
+
+.media {
+    overflow: hidden;
+}
+
+.media-img {
+    float: left;
+    margin: 0 10px 0 0;
+}
+
+.media-body {
+    overflow: hidden;
+    overflow: hidden;
+}
+
+.media-img-reversed {
+    float: right;
+    margin: 0 0 0 10px
+}
+
+.media-img-stacked {
+    float: none;
+    margin: 0;
+}
+
