--- a/css/grid.css
+++ b/css/grid.css
@@ -91,7 +91,7 @@
   visibility: visible;
 }
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 40em) {
 
 .unit-r-hidden {
   display: none;
@@ -102,7 +102,9 @@
   display: block;
   visibility: visible;
   width: 50%;
-
+        
+.unit-r-1-3 {
+  width: 33.3333%;
 }
 
 }
