--- a/css/grid.css
+++ b/css/grid.css
@@ -18,6 +18,8 @@
   word-spacing: -0.43em;
 }
 
+}
+
 .unit {
   letter-spacing: normal;
   text-rendering: auto;
@@ -102,12 +104,16 @@
   display: block;
   visibility: visible;
   width: 50%;
+}
         
 .unit-r-1-3 {
   width: 33.3333%;
 }
-
+            
+.unit-r-1-4 {
+width: 25.0000%;
 }
+                
 
 @media only screen and (min-width: 65em) {
 
@@ -217,8 +223,6 @@
 .unit-m-1-2,.unit-m-1-3,.unit-m-2-3,.unit-m-1-4,.unit-m-3-4,.unit-m-1-5,.unit-m-2-5,.unit-m-3-5,.unit-m-4-5,.unit-m-1-6,.unit-m-5-6 {
   display: inline-block;
   visibility: visible;
-}
-    
 }
     
 @media only screen and (min-width: 70em) {
