--- a/css/general.css
+++ b/css/general.css
@@ -26,6 +26,10 @@ body {
 font-family: 'Raleway', sans-serif;
 }
 
+a {
+    text-decoration:none;
+}
+
 img{
     display:block;
     width:100%;
@@ -81,7 +85,7 @@ img{
 .nav-topa:visited {
     display: inline-block;
     margin: 0;
-    padding: 1.5rem 10%;
+    padding: 1rem 5%;
     color: white;
     font-size: 1.25rem;
     text-decoration: none;
