--- a/css/general.css
+++ b/css/general.css
@@ -22,7 +22,7 @@ html {
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 0.8em;
 font-family: 'Raleway', sans-serif;
 }
 
@@ -75,7 +75,7 @@ img{
 .nav-topa:visited {
     display: inline-block;
     margin: 0;
-    padding: 1rem 5%;
+    padding: 1rem 7%;
     color: white;
     font-size: 1.25rem;
     text-decoration: none;
