--- a/css/grid.css
+++ b/css/grid.css
@@ -108,7 +108,9 @@
 }
         
 .unit-r-1-3 {
-  width: 33.3333%;
+    display: block;
+    visibility: visible;
+    width: 33.3333%;
 }
             
 .unit-r-1-4 {
