--- a/css/typography.css
+++ b/css/typography.css
@@ -24,3 +24,10 @@ p {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
 }
+
+.cover-names {
+    font-family: 'Raleway', sans-serif;   
+    color: white;
+    font-size: 1.2em;
+    text-align:center;
+}
