--- a/css/general.css
+++ b/css/general.css
@@ -48,6 +48,11 @@ img{
   width: 100%;
 }
 
+.wrapper {
+    max-width: 50em;
+    margin: 0 auto;
+}
+
 .padding {
     padding: 0em; 
 }
@@ -146,6 +151,7 @@ img{
     background-image:url("http://placehold.it/600x200");
     background-size: cover;
     background-repeat:no-repeat;
+    margin-bottom: 1em;
 }
 
 .banner {
@@ -185,7 +191,7 @@ img{
 
 figure{
     margin:0;
-    padding:0;
+    padding: 0;
 }
 
 figcaption {
@@ -193,27 +199,25 @@ figcaption {
     padding: 0;
 }
 
+.card{
+    margin:0;
+    position:relative;
+    overflow:hidden;
+}
+
+.card__text{
+    background-color: rgba(0,0,0,.50);
+    background:cover;
+    position:absolute;
+    bottom:0;
+    width: 95%;
+    padding: 1em;
+}
+
 @media only screen and (min-width: 55em) {
 
-    .card{
-        margin:0;
-        position:relative;
-        overflow:hidden;
-        
-        animation: slide-up 2000ms linear;
-        -ms-animation: slide-up 2000ms linear;
-        -moz-animation: slide-up 2000ms linear;
-        -o-animation: slide-up 2000ms linear;
-        -webkit-animation: slide-up 2000ms linear;
-    }
-    
     .card__text{
-        background-color: rgba(0,0,0,.50);
-        background:cover;
-        position:absolute;
         bottom:-4rem;
-        width: 95%;
-        padding: 1em;
         opacity: 0;
         transition: all 250ms linear;
     }
