--- a/css/grid.css
+++ b/css/grid.css
@@ -7,17 +7,30 @@
   -webkit-flex-flow: row wrap;
   display: -ms-flexbox;
   -ms-flex-flow: row wrap;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .grid-bottom {
   -webkit-align-items: flex-end;
   -ms-align-items: flex-end;
+  align-items: flex-end;
+}
+
+.grid-middle {
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+}
+
+.grid-stretch {
+  -webkit-align-items: stretch;
+  -ms-align-items: stretch;
+  align-items: stretch;
 }
 
 .opera-only :-o-prefocus, .grid {
   word-spacing: -0.43em;
-}
-
 }
 
 .unit {
@@ -33,27 +46,55 @@
   vertical-align: bottom;
 }
 
+.grid-middle .unit {
+  vertical-align: middle;
+}
+
+.unit[class*="push-"],
+.unit[class*="pull-"] {
+  position: relative;
+}
+
 .unit-s-hidden {
   display: none;
   visibility: hidden;
+}
+
+.unit-s-centered {
+  margin: 0 auto;
 }
 
 .unit-s-1 {
   display: block;
   visibility: visible;
   width: 100%;
+    margin: 0em; 
+
 }
 
 .unit-offset-s-0 {
   margin-left: 0;
 }
 
+.unit-push-s-0,
+.unit-pull-s-0 {
+  left: 0;
+}
+
 .unit-s-1-2 {
-  width: 48.0000%;
+  width: 50.0000%;
 }
 
 .unit-offset-s-1-2 {
   margin-left: 50.0000%;
+}
+
+.unit-push-s-1-2 {
+  left: 50.0000%;
+}
+
+.unit-pull-s-1-2 {
+  left: -50.0000%;
 }
 
 .unit-s-1-3 {
@@ -64,6 +105,14 @@
   margin-left: 33.3333%;
 }
 
+.unit-push-s-1-3 {
+  left: 33.3333%;
+}
+
+.unit-pull-s-1-3 {
+  left: -33.3333%;
+}
+
 .unit-s-2-3 {
   width: 66.6667%;
 }
@@ -72,13 +121,28 @@
   margin-left: 66.6667%;
 }
 
+.unit-push-s-2-3 {
+  left: 66.6667%;
+}
+
+.unit-pull-s-2-3 {
+  left: -66.6667%;
+}
+
 .unit-s-1-4 {
-  width: 25.0000%;
   width: 25.0000%;
 }
 
 .unit-offset-s-1-4 {
   margin-left: 25.0000%;
+}
+
+.unit-push-s-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-s-1-4 {
+  left: -25.0000%;
 }
 
 .unit-s-3-4 {
@@ -87,6 +151,14 @@
 
 .unit-offset-s-3-4 {
   margin-left: 75.0000%;
+}
+
+.unit-push-s-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-s-3-4 {
+  left: -75.0000%;
 }
 
 .unit-s-1-2,.unit-s-1-3,.unit-s-2-3,.unit-s-1-4,.unit-s-3-4 {
@@ -101,28 +173,121 @@
   visibility: hidden;
 }
 
-.unit-r-1-2 {
+.unit-r-centered {
+  margin: 0 auto;
+}
+
+.unit-r-1 {
   display: block;
   visibility: visible;
-  width: 48.00000%;
+  width: 100%;
 }
-        
+
+.unit-offset-r-0 {
+  margin-left: 0;
+}
+
+.unit-push-r-0,
+.unit-pull-r-0 {
+  left: 0;
+}
+
+.unit-r-1-2 {
+  width: 50.0000%;
+}
+
+.unit-offset-r-1-2 {
+  margin-left: 50.0000%;
+}
+
+.unit-push-r-1-2 {
+  left: 50.0000%;
+}
+
+.unit-pull-r-1-2 {
+  left: -50.0000%;
+}
+
 .unit-r-1-3 {
-    display: block;
-    visibility: visible;
-    width: 33.3333%;
+  width: 33.3333%;
 }
-            
+
+.unit-offset-r-1-3 {
+  margin-left: 33.3333%;
+}
+
+.unit-push-r-1-3 {
+  left: 33.3333%;
+}
+
+.unit-pull-r-1-3 {
+  left: -33.3333%;
+}
+
+.unit-r-2-3 {
+  width: 66.6667%;
+}
+
+.unit-offset-r-2-3 {
+  margin-left: 66.6667%;
+}
+
+.unit-push-r-2-3 {
+  left: 66.6667%;
+}
+
+.unit-pull-r-2-3 {
+  left: -66.6667%;
+}
+
 .unit-r-1-4 {
-width: 25.0000%;
+  width: 25.0000%;
 }
-                
+
+.unit-offset-r-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-push-r-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-r-1-4 {
+  left: -25.0000%;
+}
+
+.unit-r-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-r-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-push-r-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-r-3-4 {
+  left: -75.0000%;
+}
+
+.unit-r-1-2,.unit-r-1-3,.unit-r-2-3,.unit-r-1-4,.unit-r-3-4 {
+  display: inline-block;
+  visibility: visible;
+}
+
+}
 
 @media only screen and (min-width: 55em) {
 
 .unit-m-hidden {
   display: none;
   visibility: hidden;
+}
+
+.unit-m-centered {
+  margin: 0 auto;
 }
 
 .unit-m-1 {
@@ -135,20 +300,41 @@ width: 25.0000%;
   margin-left: 0;
 }
 
+.unit-push-m-0,
+.unit-pull-m-0 {
+  left: 0;
+}
+
 .unit-m-1-2 {
-  width: 49.0000%;
+  width: 50.0000%;
 }
 
 .unit-offset-m-1-2 {
-  margin-left: 49.0000%;
+  margin-left: 50.0000%;
+}
+
+.unit-push-m-1-2 {
+  left: 50.0000%;
+}
+
+.unit-pull-m-1-2 {
+  left: -50.0000%;
 }
 
 .unit-m-1-3 {
-  width: 32%;
+  width: 33.3333%;
 }
 
 .unit-offset-m-1-3 {
   margin-left: 33.3333%;
+}
+
+.unit-push-m-1-3 {
+  left: 33.3333%;
+}
+
+.unit-pull-m-1-3 {
+  left: -33.3333%;
 }
 
 .unit-m-2-3 {
@@ -159,12 +345,28 @@ width: 25.0000%;
   margin-left: 66.6667%;
 }
 
+.unit-push-m-2-3 {
+  left: 66.6667%;
+}
+
+.unit-pull-m-2-3 {
+  left: -66.6667%;
+}
+
 .unit-m-1-4 {
   width: 25.0000%;
 }
 
 .unit-offset-m-1-4 {
   margin-left: 25.0000%;
+}
+
+.unit-push-m-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-m-1-4 {
+  left: -25.0000%;
 }
 
 .unit-m-3-4 {
@@ -175,12 +377,28 @@ width: 25.0000%;
   margin-left: 75.0000%;
 }
 
+.unit-push-m-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-m-3-4 {
+  left: -75.0000%;
+}
+
 .unit-m-1-5 {
   width: 20.0000%;
 }
 
 .unit-offset-m-1-5 {
   margin-left: 20.0000%;
+}
+
+.unit-push-m-1-5 {
+  left: 20.0000%;
+}
+
+.unit-pull-m-1-5 {
+  left: -20.0000%;
 }
 
 .unit-m-2-5 {
@@ -191,12 +409,28 @@ width: 25.0000%;
   margin-left: 40.0000%;
 }
 
+.unit-push-m-2-5 {
+  left: 40.0000%;
+}
+
+.unit-pull-m-2-5 {
+  left: -40.0000%;
+}
+
 .unit-m-3-5 {
   width: 60.0000%;
 }
 
 .unit-offset-m-3-5 {
   margin-left: 60.0000%;
+}
+
+.unit-push-m-3-5 {
+  left: 60.0000%;
+}
+
+.unit-pull-m-3-5 {
+  left: -60.0000%;
 }
 
 .unit-m-4-5 {
@@ -207,12 +441,28 @@ width: 25.0000%;
   margin-left: 80.0000%;
 }
 
+.unit-push-m-4-5 {
+  left: 80.0000%;
+}
+
+.unit-pull-m-4-5 {
+  left: -80.0000%;
+}
+
 .unit-m-1-6 {
   width: 16.6667%;
 }
 
 .unit-offset-m-1-6 {
   margin-left: 16.6667%;
+}
+
+.unit-push-m-1-6 {
+  left: 16.6667%;
+}
+
+.unit-pull-m-1-6 {
+  left: -16.6667%;
 }
 
 .unit-m-5-6 {
@@ -223,16 +473,30 @@ width: 25.0000%;
   margin-left: 83.3333%;
 }
 
+.unit-push-m-5-6 {
+  left: 83.3333%;
+}
+
+.unit-pull-m-5-6 {
+  left: -83.3333%;
+}
+
 .unit-m-1-2,.unit-m-1-3,.unit-m-2-3,.unit-m-1-4,.unit-m-3-4,.unit-m-1-5,.unit-m-2-5,.unit-m-3-5,.unit-m-4-5,.unit-m-1-6,.unit-m-5-6 {
   display: inline-block;
   visibility: visible;
 }
-    
+
+}
+
 @media only screen and (min-width: 75em) {
 
 .unit-l-hidden {
   display: none;
   visibility: hidden;
+}
+
+.unit-l-centered {
+  margin: 0 auto;
 }
 
 .unit-l-1 {
@@ -245,12 +509,25 @@ width: 25.0000%;
   margin-left: 0;
 }
 
+.unit-push-l-0,
+.unit-pull-l-0 {
+  left: 0;
+}
+
 .unit-l-1-2 {
-  width: 49.00000%;
+  width: 50.0000%;
 }
 
 .unit-offset-l-1-2 {
   margin-left: 50.0000%;
+}
+
+.unit-push-l-1-2 {
+  left: 50.0000%;
+}
+
+.unit-pull-l-1-2 {
+  left: -50.0000%;
 }
 
 .unit-l-1-3 {
@@ -261,6 +538,14 @@ width: 25.0000%;
   margin-left: 33.3333%;
 }
 
+.unit-push-l-1-3 {
+  left: 33.3333%;
+}
+
+.unit-pull-l-1-3 {
+  left: -33.3333%;
+}
+
 .unit-l-2-3 {
   width: 66.6667%;
 }
@@ -269,12 +554,28 @@ width: 25.0000%;
   margin-left: 66.6667%;
 }
 
+.unit-push-l-2-3 {
+  left: 66.6667%;
+}
+
+.unit-pull-l-2-3 {
+  left: -66.6667%;
+}
+
 .unit-l-1-4 {
-  width: 24.0000%;
+  width: 25.0000%;
 }
 
 .unit-offset-l-1-4 {
   margin-left: 25.0000%;
+}
+
+.unit-push-l-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-l-1-4 {
+  left: -25.0000%;
 }
 
 .unit-l-3-4 {
@@ -285,12 +586,28 @@ width: 25.0000%;
   margin-left: 75.0000%;
 }
 
+.unit-push-l-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-l-3-4 {
+  left: -75.0000%;
+}
+
 .unit-l-1-5 {
   width: 20.0000%;
 }
 
 .unit-offset-l-1-5 {
   margin-left: 20.0000%;
+}
+
+.unit-push-l-1-5 {
+  left: 20.0000%;
+}
+
+.unit-pull-l-1-5 {
+  left: -20.0000%;
 }
 
 .unit-l-2-5 {
@@ -301,12 +618,28 @@ width: 25.0000%;
   margin-left: 40.0000%;
 }
 
+.unit-push-l-2-5 {
+  left: 40.0000%;
+}
+
+.unit-pull-l-2-5 {
+  left: -40.0000%;
+}
+
 .unit-l-3-5 {
   width: 60.0000%;
 }
 
 .unit-offset-l-3-5 {
   margin-left: 60.0000%;
+}
+
+.unit-push-l-3-5 {
+  left: 60.0000%;
+}
+
+.unit-pull-l-3-5 {
+  left: -60.0000%;
 }
 
 .unit-l-4-5 {
@@ -317,12 +650,28 @@ width: 25.0000%;
   margin-left: 80.0000%;
 }
 
+.unit-push-l-4-5 {
+  left: 80.0000%;
+}
+
+.unit-pull-l-4-5 {
+  left: -80.0000%;
+}
+
 .unit-l-1-6 {
   width: 16.6667%;
 }
 
 .unit-offset-l-1-6 {
   margin-left: 16.6667%;
+}
+
+.unit-push-l-1-6 {
+  left: 16.6667%;
+}
+
+.unit-pull-l-1-6 {
+  left: -16.6667%;
 }
 
 .unit-l-5-6 {
@@ -333,12 +682,28 @@ width: 25.0000%;
   margin-left: 83.3333%;
 }
 
+.unit-push-l-5-6 {
+  left: 83.3333%;
+}
+
+.unit-pull-l-5-6 {
+  left: -83.3333%;
+}
+
 .unit-l-1-7 {
   width: 14.2857%;
 }
 
 .unit-offset-l-1-7 {
   margin-left: 14.2857%;
+}
+
+.unit-push-l-1-7 {
+  left: 14.2857%;
+}
+
+.unit-pull-l-1-7 {
+  left: -14.2857%;
 }
 
 .unit-l-2-7 {
@@ -349,12 +714,28 @@ width: 25.0000%;
   margin-left: 28.5714%;
 }
 
+.unit-push-l-2-7 {
+  left: 28.5714%;
+}
+
+.unit-pull-l-2-7 {
+  left: -28.5714%;
+}
+
 .unit-l-3-7 {
   width: 42.8571%;
 }
 
 .unit-offset-l-3-7 {
   margin-left: 42.8571%;
+}
+
+.unit-push-l-3-7 {
+  left: 42.8571%;
+}
+
+.unit-pull-l-3-7 {
+  left: -42.8571%;
 }
 
 .unit-l-4-7 {
@@ -365,12 +746,28 @@ width: 25.0000%;
   margin-left: 57.1429%;
 }
 
+.unit-push-l-4-7 {
+  left: 57.1429%;
+}
+
+.unit-pull-l-4-7 {
+  left: -57.1429%;
+}
+
 .unit-l-5-7 {
   width: 71.4286%;
 }
 
 .unit-offset-l-5-7 {
   margin-left: 71.4286%;
+}
+
+.unit-push-l-5-7 {
+  left: 71.4286%;
+}
+
+.unit-pull-l-5-7 {
+  left: -71.4286%;
 }
 
 .unit-l-6-7 {
@@ -381,12 +778,28 @@ width: 25.0000%;
   margin-left: 85.7143%;
 }
 
+.unit-push-l-6-7 {
+  left: 85.7143%;
+}
+
+.unit-pull-l-6-7 {
+  left: -85.7143%;
+}
+
 .unit-l-1-8 {
   width: 12.5000%;
 }
 
 .unit-offset-l-1-8 {
   margin-left: 12.5000%;
+}
+
+.unit-push-l-1-8 {
+  left: 12.5000%;
+}
+
+.unit-pull-l-1-8 {
+  left: -12.5000%;
 }
 
 .unit-l-3-8 {
@@ -397,6 +810,14 @@ width: 25.0000%;
   margin-left: 37.5000%;
 }
 
+.unit-push-l-3-8 {
+  left: 37.5000%;
+}
+
+.unit-pull-l-3-8 {
+  left: -37.5000%;
+}
+
 .unit-l-5-8 {
   width: 62.5000%;
 }
@@ -405,12 +826,28 @@ width: 25.0000%;
   margin-left: 62.5000%;
 }
 
+.unit-push-l-5-8 {
+  left: 62.5000%;
+}
+
+.unit-pull-l-5-8 {
+  left: -62.5000%;
+}
+
 .unit-l-7-8 {
   width: 87.5000%;
 }
 
 .unit-offset-l-7-8 {
   margin-left: 87.5000%;
+}
+
+.unit-push-l-7-8 {
+  left: 87.5000%;
+}
+
+.unit-pull-l-7-8 {
+  left: -87.5000%;
 }
 
 .unit-l-1-2,.unit-l-1-3,.unit-l-2-3,.unit-l-1-4,.unit-l-3-4,.unit-l-1-5,.unit-l-2-5,.unit-l-3-5,.unit-l-4-5,.unit-l-1-6,.unit-l-5-6,.unit-l-1-7,.unit-l-2-7,.unit-l-3-7,.unit-l-4-7,.unit-l-5-7,.unit-l-6-7,.unit-l-1-8,.unit-l-3-8,.unit-l-5-8,.unit-l-7-8 {
