--- a/css/general.css
+++ b/css/general.css
@@ -35,6 +35,10 @@ img{
     width:100%;
 }
 
+.white {
+    color: white;
+}
+
 .ir {
   overflow: hidden;
   text-indent: 100%;
@@ -152,14 +156,14 @@ img{
 .banner {
     width: 100%;
     height: 200px;
-    background-image:url("http://placehold.it/600x200");
+    background-image:url(../images/bridgehead-banner.jpg);;
     background-size: cover;
     background-repeat:no-repeat;
     margin-bottom: 1em;
 }
 
 .banner {
-    background-image: url("http://placehold.it/600x200");
+    background-image:url(../images/bridgehead-banner.jpg);
     background-position: center;
 }
 
