--- a/css/general.css
+++ b/css/general.css
@@ -102,13 +102,13 @@ img{
 .about-background {
     width: 100%;
     height: 250px;
-    background-image:url("http://placehold.it/800x400");
+    background-image:url(../images/home-page-banner.jpg);
     background-size: cover;
     background-repeat:no-repeat;
 }
 
 .about-background {
-    background-image: url("http://placehold.it/800x400");
+    background-image:url(../images/home-page-banner.jpg);
     background-position: center;
 }
 
