--- a/css/general.css
+++ b/css/general.css
@@ -167,6 +167,20 @@ img{
     background-position: center;
 }
 
+.cirque-banner {
+    width: 100%;
+    height: 200px;
+    background-image:url(../images/cirque-du-soleil-banner.jpg);
+    background-size: cover;
+    background-repeat:no-repeat;
+    margin-bottom: 1em;
+}
+
+.cirque-banner {
+    background-image:url(../images/cirque-du-soleil-banner.jpg);
+    background-position: center;
+}
+
 .media {
     overflow: hidden;
 }
