--- a/css/general.css
+++ b/css/general.css
@@ -35,6 +35,12 @@ img{
     width:100%;
 }
 
+.columns {
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+}
+
 .white {
     color: white;
 }
