Created Better Spacing and Added Some Colour

--- a/css/general.css
+++ b/css/general.css
@@ -23,7 +23,7 @@ html {
 body {
   margin: 0;
   padding: 0em;
-font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 a {
@@ -38,6 +38,10 @@ img{
 footer {
     padding: 2em;
     color: white;
+}
+
+.border-bottom {
+    border-bottom: #ecefb3 solid 0.1em
 }
 
 .white {
