--- a/css/typography.css
+++ b/css/typography.css
@@ -3,6 +3,7 @@ Colour:
 
 
 teal: #323d42
+yellow: #ecefb3
 
 */
 
@@ -15,18 +16,23 @@ h1 {
 h2 {
     font-family: 'Raleway', sans-serif;
     font-size: 1.5em;
+    color: #323d42;
 }
 
 h3 {
     font-family: 'Raleway', sans-serif;
     font-size: 1.2em;
+    color: #323d42;
+    margin-bottom: 1em;
 }
 
 h4 {
     font-family: 'Raleway', sans-serif;
     font-size: 0.8em;
     font-weight: normal;
-    font-style: normal;   
+    font-style: normal;
+    margin: 0em;
+    line-height: 1.5em;
 }
 
 p {
@@ -53,4 +59,16 @@ footer {
 
 .logo-spacing {
     margin: 1em;
+}
+
+.catchy-title{
+    background-color: #323d42;
+    padding: 1em;
+    margin: 0em;
+    color: white;
+    
+}
+
+.yellow {
+ color: #ecefb3;   
 }
