Improved Spacing of Content

--- a/css/general.css
+++ b/css/general.css
@@ -82,7 +82,7 @@ footer {
 .nav-top ul {
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: #323d42;
     text-align: center;
 }
 
