--- a/css/typography.css
+++ b/css/typography.css
@@ -38,7 +38,7 @@ h4 {
 p {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
-    padding: 2em 0em;
+    padding: 0em 2em 0em 0em;
 }
 
 .cover-names {
@@ -65,10 +65,14 @@ footer {
     background-color: #323d42;
     padding: 1em;
     margin: 0em;
-    color: white;
+    color: #ecefb3;
     
 }
 
 .yellow {
  color: #ecefb3;   
+}
+
+.no-margin {
+    margin: 0em;
 }
