Created Motion Templates

--- a/css/general.css
+++ b/css/general.css
@@ -204,9 +204,11 @@ footer {
     overflow: hidden;
 }
 
+
+
 .media-img-reversed {
     float: right;
-    margin: 0 0 0 10px
+    margin: 0 0 0 10px;
 }
 
 .media-img-stacked {
