--- a/css/grid.css
+++ b/css/grid.css
@@ -852,6 +852,10 @@
   left: -87.5000%;
 }
 
+.unit-l-special {
+  left: 40%;
+}
+
 .unit-l-1-2,.unit-l-1-3,.unit-l-2-3,.unit-l-1-4,.unit-l-3-4,.unit-l-1-5,.unit-l-2-5,.unit-l-3-5,.unit-l-4-5,.unit-l-1-6,.unit-l-5-6,.unit-l-1-7,.unit-l-2-7,.unit-l-3-7,.unit-l-4-7,.unit-l-5-7,.unit-l-6-7,.unit-l-1-8,.unit-l-3-8,.unit-l-5-8,.unit-l-7-8 {
   display: inline-block;
   visibility: visible;
