--- a/css/general.css
+++ b/css/general.css
@@ -121,16 +121,16 @@ footer {
     background-position: center;
 }
 
-.contact-background {
+.layout-background {
     width: 100%;
-    height: 320px;
-    background-image:url("http://placehold.it/800x400");
+    height: 250px;
+    background-image:url(../images/bridgehead-banner.jpg);
     background-size: cover;
     background-repeat:no-repeat;
 }
 
-.contact-background {
-    background-image: url("http://placehold.it/800x400");
+.layout-background {
+    background-image:url(../images/bridgehead-banner.jpg);
     background-position: center;
 }
 
@@ -162,18 +162,6 @@ footer {
     top: 1em;
 }
 
-.banner {
-    width: 100%;
-    height: 200px;
-    background-image:url(../images/bridgehead-banner.jpg);;
-    background-size: cover;
-    background-repeat:no-repeat;
-    margin-bottom: 1em;
-}
-
-.banner {
-    background-image:url(../images/bridgehead-banner.jpg);
-    background-position: center;
 }
 
 .cirque-banner {
