--- a/css/typography.css
+++ b/css/typography.css
@@ -40,6 +40,7 @@ p {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
     padding: 0em 2em 0em 0em;
+    margin: 2em;
 }
 
 .cover-names {
