Made the video responsive

--- a/css/general.css
+++ b/css/general.css
@@ -249,4 +249,27 @@ figcaption {
     }
     
 }   
+
+
+/* Responsive video */
+
+.embed {
+	margin-left: 0;
+	margin-right: 0;
+	position: relative;
+	width: 100%;
+}
+
+.embed__item {
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+.embed--16by9 {
+	/* HD TV */
+	padding-top: 56.25%;
+}
     
