--- a/css/grid.css
+++ b/css/grid.css
@@ -167,6 +167,7 @@
 
 }
 
+
 @media only screen and (min-width: 40em) {
 
 .unit-r-hidden {
@@ -193,7 +194,7 @@
   left: 0;
 }
 
-.unit-r-1-2 {
+.unit-m-r-2 {
   width: 50.0000%;
 }
 
@@ -273,7 +274,103 @@
   left: -75.0000%;
 }
 
-.unit-r-1-2,.unit-r-1-3,.unit-r-2-3,.unit-r-1-4,.unit-r-3-4 {
+.unit-r-1-5 {
+  width: 20.0000%;
+}
+
+.unit-offset-r-1-5 {
+  margin-left: 20.0000%;
+}
+
+.unit-push-r-1-5 {
+  left: 20.0000%;
+}
+
+.unit-pullr-1-5 {
+  left: -20.0000%;
+}
+
+.unit-r-2-5 {
+  width: 40.0000%;
+}
+
+.unit-offset-r-2-5 {
+  margin-left: 40.0000%;
+}
+
+.unit-push-r-2-5 {
+  left: 40.0000%;
+}
+
+.unit-pull-r-2-5 {
+  left: -40.0000%;
+}
+
+.unit-r-3-5 {
+  width: 60.0000%;
+}
+
+.unit-offset-r-3-5 {
+  margin-left: 60.0000%;
+}
+
+.unit-push-r-3-5 {
+  left: 60.0000%;
+}
+
+.unit-pull-r-3-5 {
+  left: -60.0000%;
+}
+
+.unit-r-4-5 {
+  width: 80.0000%;
+}
+
+.unit-offset-r-4-5 {
+  margin-left: 80.0000%;
+}
+
+.unit-push-r-4-5 {
+  left: 80.0000%;
+}
+
+.unit-pull-r-4-5 {
+  left: -80.0000%;
+}
+
+.unit-r-1-6 {
+  width: 16.6667%;
+}
+
+.unit-offset-r-1-6 {
+  margin-left: 16.6667%;
+}
+
+.unit-push-r-1-6 {
+  left: 16.6667%;
+}
+
+.unit-pull-r-1-6 {
+  left: -16.6667%;
+}
+
+.unit-r-5-6 {
+  width: 83.3333%;
+}
+
+.unit-offset-r-5-6 {
+  margin-left: 83.3333%;
+}
+
+.unit-push-r-5-6 {
+  left: 83.3333%;
+}
+
+.unit-pull-r-5-6 {
+  left: -83.3333%;
+}
+
+.unit-r-1-2,.unit-r-1-3,.unit-r-2-3,.unit-r-1-4,.unit-r-3-4,.unit-r-1-5,.unit-r-2-5,.unit-r-3-5,.unit-r-4-5,.unit-r-1-6,.unit--5-6 {
   display: inline-block;
   visibility: visible;
 }
@@ -866,26 +963,27 @@
     -webkit-column-count: 1; /* Chrome, Safari, Opera */
     -moz-column-count: 1; /* Firefox */
     column-count: 1;
+    margin: 1.5em;
 }
 
 @media only screen and (min-width: 40em) {
 
 .columns-r {
-    -webkit-column-count: 2; /* Chrome, Safari, Opera */
-    -moz-column-count: 2; /* Firefox */
-    column-count: 2;
+    -webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+    margin: 2em;
 }
     
 }
 
-@media only screen and (min-width: 75em) {
+@media only screen and (min-width: 90em) {
     
 .columns-l {
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
     -moz-column-count: 2; /* Firefox */
     column-count: 2;
-    left: 50%;
-    margin: 5em;
+    margin: 3em;
 }
  
 }
