--- a/css/typography.css
+++ b/css/typography.css
@@ -12,7 +12,7 @@ h1 {
     font-family: 'Raleway', sans-serif;
     font-size: 2em;
     color: #323d42;
-    padding-left: 1em;
+    padding-left: .5em;
 }
 
 h2 {
@@ -40,8 +40,7 @@ h4 {
 p {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
-    padding: 0em 2em 0em 0em;
-    margin: 2em;
+    padding: 0.5em;
 }
 
 .cover-names {
@@ -54,10 +53,6 @@ p {
 footer {
     background-color: #323d42;
     margin: 0em;
-}
-
-.type-spacing {
-    margin: 2em;
 }
 
 .logotype {
