--- a/css/grid.css
+++ b/css/grid.css
@@ -84,12 +84,16 @@
   width: 50.0000%;
 }
 
+.unit-s-1-02 {
+  width: 47.0000%;
+}
+
 .unit-offset-s-1-2 {
   margin-left: 50.0000%;
 }
 
 .unit-push-s-1-2 {
-  left: 50.0000%;
+  left: 49.0000%;
 }
 
 .unit-pull-s-1-2 {
@@ -430,6 +434,10 @@
 
 .unit-m-1-3 {
   width: 33.3333%;
+}
+    
+.unit-m-01-3 {
+    width: 30.000%;
 }
 
 .unit-offset-m-1-3 {
