--- a/css/general.css
+++ b/css/general.css
@@ -57,6 +57,13 @@ footer {
     color: white;
 }
 
+.address {
+    color: white;
+    font-style:normal;
+    font-weight:normal;
+    
+}
+
 .ir {
   overflow: hidden;
   text-indent: 100%;
