--- a/css/typography.css
+++ b/css/typography.css
@@ -43,6 +43,22 @@ p {
     padding: 0.5em;
 }
 
+.name {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.8em;
+    margin-top: 1em;
+    padding: 0em;
+}
+
+.address {
+    color: white;
+    font-style:normal;
+    font-weight:normal;
+    margin-bottom: 2em;
+    font-size: 1.1em;
+}
+
 .cover-names {
     font-family: 'Raleway', sans-serif;   
     color: white;
