--- a/css/typography.css
+++ b/css/typography.css
@@ -43,6 +43,11 @@ p {
     padding: 0.5em;
 }
 
+footer {
+    background-color: #323d42;
+    margin: 0em;
+}
+
 .name {
     color: white;
     font-family: 'Raleway', sans-serif;
@@ -64,11 +69,6 @@ p {
     color: white;
     font-size: 1.2em;
     text-align:center;
-}
-
-footer {
-    background-color: #323d42;
-    margin: 0em;
 }
 
 .logotype {
@@ -100,6 +100,10 @@ footer {
     color: #323d42; 
 }
 
+.margin-top {
+    margin-top: 2em;
+}
+
 .no-margin {
     margin: 0em;
 }
@@ -108,8 +112,4 @@ footer {
     padding: 0em;
     margin: 1em 0em 0em 1.5em;
     color: #323d42;
-}
-
-.indent {
-    
 }
