--- a/css/grid.css
+++ b/css/grid.css
@@ -84,6 +84,10 @@
   width: 49%;
 }
 
+.unit-s-half {
+    width: 50%;
+}
+
 .unit-s-1-02 {
   width: 47.0000%;
 }
@@ -436,6 +440,12 @@
   width: 32%;
 }
     
+.unit-m-third {
+    width: 32.8%;
+    display: block;
+    visibility: visible;
+}
+    
 .unit-m-01-3 {
     width: 30.000%;
 }
@@ -647,6 +657,10 @@
 
 .unit-l-1-3 {
   width: 30%;
+}
+    
+.unit-l-third {
+    width: 33.333%;
 }
 
 .unit-offset-l-1-3 {
